# JohnStrunk-_-URLoad

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  release.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  mergify.yml  renovate.json5
.github/instructions/: commands.instructions.md
.github/workflows/: ci-workflow.yaml  copilot-setup-steps.yml
hack/: check.sh
src/urload/: __init__.py  __main__.py  main.py  settings.py  url.py
src/urload/commands/: add.py  base.py  clear.py  del.py  delete.py  discard.py  exit.py  fileformat.py  get.py  get_option.py  head.py  help.py  href.py  img.py  keep.py  list.py  load.py  save.py  scrape.py  set_option.py  sort.py  tail.py  timeformat.py  title.py  uniq.py
tests/: test_add_command.py  test_base_command.py  test_batch_command.py  test_build_filename.py  test_clear_command.py  test_completer.py  test_del_command.py  test_discard_command.py  test_fileformat_command.py  test_get_command.py  test_head_command.py  test_help_command.py  test_href_command.py  test_img_command.py  test_keep_command.py  test_list_command.py  test_load_save_command.py  test_option_commands.py  test_settings.py  test_sort_command.py  test_tail_command.py  test_timeformat_command.py  test_title_command.py  test_uniq_command.py  test_url.py
